SAK-12996 Minor code cleanup from static code review.
NP_NULL_ON_SOME_PATH_EXCEPTION	
org.sakaiproject.component.app.help.HelpManagerImpl:1018	
Possible null pointer dereference of writer in org.sakaiproject.component.app.help.HelpManagerImpl.registerHelpContent() on exception path

UWF_UNWRITTEN_FIELD
org.sakaiproject.tool.help.ContentServlet:114
Unwritten field: org.sakaiproject.tool.help.ContentServlet.helpManager

DM_NUMBER_CTOR
org.sakaiproject.component.app.help.HelpManagerImpl:1312
Method org.sakaiproject.component.app.help.HelpManagerImpl.recursiveExternalReg(Node, Category, Set) invokes inefficient new Integer(int) constructor; use Integer.valueOf(int) instead

DM_STRING_VOID_CTOR
org.sakaiproject.tool.help.ContentServlet:91
org.sakaiproject.tool.help.ContentServlet.doGet(HttpServletRequest, HttpServletResponse) invokes inefficient new String() constructor

RCN_REDUNDANT_NULLCHECK_OF_NULL_VALUE
org.sakaiproject.component.app.help.HelpManagerImpl:1107
Redundant nullcheck of bisCorpus which is known to be null in org.sakaiproject.component.app.help.HelpManagerImpl.registerExternalHelpContent(String)

DLS_DEAD_LOCAL_STORE
org.sakaiproject.jsf.help.HelpFrameSetRender:78
Dead store to helpUrl in org.sakaiproject.jsf.help.HelpFrameSetRender.encodeBegin(FacesContext, UIComponent)

DLS_DEAD_LOCAL_STORE
org.sakaiproject.jsf.help.HelpSetDefaultActionComponent:64
Dead store to formId in org.sakaiproject.jsf.help.HelpSetDefaultActionComponent.encodeEnd(FacesContext)

DLS_DEAD_LOCAL_STORE
org.sakaiproject.tool.help.TableOfContentsTool:93
Dead store to servletPath in org.sakaiproject.tool.help.TableOfContentsTool.getBaseUrl()


git-svn-id: https://source.sakaiproject.org/svn/help/trunk@41246 66ffb92e-73f9-0310-93c1-f5514f145a0a